Changes in the way Byte instances are created